--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -21,7 +21,7 @@
           Export Data
         </button>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="{{ url_for('export_leads') }}">
+          <a class="dropdown-item" href="{{ url_for('export_closed_leads') }}">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-table" width="16" height="16" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" style="margin-right: 8px;">
               <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
               <path d="M3 5a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v14a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-14z" />
